aggiunta views prime 4 tabelle
docs: update project documentation and configurations for v1.1

- Update README.md with current v1.1 status (47 views, 40 templates, 16 models)
- Add client module and backup system details to project overview
- Update .github/copilot-instructions.md with v1.1 architecture details
- Configure .vscode/settings.json for Django development (disable linting, add template support)
- Add Django plugins and naming conventions to .pylintrc
- Update .gitignore to exclude personal files while keeping backups tracked
- Update ANALISI_TABELLE_CSV.md to reflect completed client module Phase 1 (6 tables implemented)
- Document 66 total records across client tables with migration status

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,24 @@ db.sqlite3
 media/
 staticfiles/
 
-# Backup SQL (escludi backup, MA non gli script di setup)
-backups/
-backups/*.sql
-backups/*.sql.gz
-fix_columns.sql
+# Database MySQL (escludi dump locali, mantieni script setup)
+*.sql
+!database_creation.sql
+!populate_scm_tables.sql
+
+# Environment & Config
+.env
+.env.*
+settings_local.py
+config/settings_local.py
+
+# Logs & Cache
+logs/
+*.log
+.cache/
+.pytest_cache/
+.coverage
+htmlcov/
 
 # IDE - Escludi quasi tutto ECCETTO settings.json di progetto
 .vscode/*
